[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/tree.gd" type="Script" id=1]
[ext_resource path="res://textures/branches.png" type="Texture" id=2]
[ext_resource path="res://textures/trunk.png" type="Texture" id=3]
[ext_resource path="res://textures/hole.png" type="Texture" id=4]
[ext_resource path="res://textures/tree_top_layer.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 27, 338 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 27, 128 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 124, 9.05769 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 94.0384, 28.477 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 44, 514 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 35, 138 )

[sub_resource type="Animation" id=7]

resource/name = "before_falling"
length = 0.06
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("tree:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.02, 0.04 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -494 ), Vector2( 1, -494 ), Vector2( 0, -493 ) ]
}

[sub_resource type="Animation" id=8]

resource/name = "fall"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="tree" type="Node2D"]

script/script = ExtResource( 1 )
wait_time = 0.0
can_fall = false
last_tree = false

[node name="tree" type="Position2D" parent="."]

transform/pos = Vector2( 0.196698, -493.197 )

[node name="branches" type="Sprite" parent="tree"]

texture = ExtResource( 2 )

[node name="trunk" type="Sprite" parent="tree"]

transform/pos = Vector2( -0.196698, 1.19699 )
texture = ExtResource( 3 )

[node name="hole" type="Sprite" parent="tree"]

texture = ExtResource( 4 )

[node name="tree_top_layer" type="Sprite" parent="tree"]

z/z = 2
texture = ExtResource( 5 )

[node name="collisors" type="Position2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 0.196698, -493.197 )

[node name="trunk" type="StaticBody2D" parent="collisors"]

transform/pos = Vector2( -1.1967, 493.197 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -2, -638 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -1, -116 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisors/trunk"]

transform/pos = Vector2( -2, -638 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="collisors/trunk"]

transform/pos = Vector2( -1, -116 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="floor" type="StaticBody2D" parent="collisors"]

transform/pos = Vector2( -0.196698, 1.19699 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.999401, -0.0346134, 0.0346134, 0.999401, 0, 243 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
one_way_collision/direction = Vector2( 0, 1 )
one_way_collision/max_depth = 1.0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="collisors/floor"]

transform/pos = Vector2( 0, 243 )
transform/rot = 1.9836
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="area_fall" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( -1, -269 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_fall"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="area_z" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -2, -489 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 0, -262 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_z"]

transform/pos = Vector2( -2, -489 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="area_z"]

transform/pos = Vector2( 0, -262 )
transform/rot = 90.0
shape = SubResource( 6 )
trigger = false
_update_shape_index = 1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/before_falling = SubResource( 7 )
anims/fall = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="area_fall" to="." method="_on_area_fall_body_enter"]

[connection signal="body_enter" from="area_z" to="." method="_on_area_z_body_enter"]


